<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_100"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_4"
            android:src="@drawable/girl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/deepa_joshi"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tvMemberText"
            app:layout_constraintLeft_toRightOf="@id/ivProfile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMemberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_since"
            android:textColor="@color/font_color"
            app:layout_constraintBottom_toTopOf="@id/tvViewProfile"
            app:layout_constraintLeft_toLeftOf="@id/tvProfileName"
            app:layout_constraintTop_toBottomOf="@id/tvProfileName"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfileCalendar"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:layout_marginStart="@dimen/dp_14"
            android:src="@drawable/calendar"
            app:layout_constraintBottom_toBottomOf="@id/tvMemberText"
            app:layout_constraintLeft_toRightOf="@id/tvMemberText"
            app:layout_constraintTop_toTopOf="@id/tvMemberText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/_20_sept_2021"
            android:textColor="@color/font_color"
            android:textSize="@dimen/font_small"
            app:layout_constraintBottom_toBottomOf="@id/tvMemberText"
            app:layout_constraintLeft_toRightOf="@id/ivProfileCalendar"
            app:layout_constraintTop_toTopOf="@id/tvMemberText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_profile"
            android:textColor="@color/font_color"
            android:textSize="@dimen/font_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tvMemberText"
            app:layout_constraintTop_toBottomOf="@id/tvMemberText"
            app:layout_constraintVertical_chainStyle="spread" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>