<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DetailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnFollow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/common_padding">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_120"
                android:layout_marginTop="@dimen/dp_40"
                android:src="@drawable/girl"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/deepa_joshi"
                android:textColor="@color/black"
                android:textSize="@dimen/font_medium"
                app:layout_constraintLeft_toLeftOf="@id/ivImage"
                app:layout_constraintRight_toRightOf="@id/ivImage"
                app:layout_constraintTop_toBottomOf="@id/ivImage" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfileCalendar"
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_8"
                android:src="@drawable/calendar"
                app:layout_constraintLeft_toLeftOf="@id/ivImage"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/since_20_sept_2021"
                android:textColor="@color/font_color"
                android:textSize="@dimen/font_small"
                app:layout_constraintLeft_toRightOf="@id/ivProfileCalendar"
                app:layout_constraintTop_toBottomOf="@id/ivProfileCalendar"
                app:layout_constraintTop_toTopOf="@id/ivProfileCalendar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clFollowContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_28"
                android:background="@color/grey25"
                android:padding="@dimen/dp_18"
                app:layout_constraintTop_toBottomOf="@id/ivProfileCalendar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/viewLine"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small"
                    app:layout_constraintLeft_toLeftOf="@id/tvFollowers"
                    app:layout_constraintRight_toRightOf="@id/tvFollowers"
                    app:layout_constraintTop_toBottomOf="@id/tvFollowers" />

                <View
                    android:id="@+id/viewLine"
                    android:layout_width="@dimen/dp_2"
                    android:layout_height="@dimen/dp_20"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFollowings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small"
                    app:layout_constraintLeft_toRightOf="@id/viewLine"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small"
                    app:layout_constraintLeft_toLeftOf="@id/tvFollowings"
                    app:layout_constraintRight_toRightOf="@id/tvFollowings"
                    app:layout_constraintTop_toBottomOf="@id/tvFollowings" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/lend"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/clFollowContainer"
                app:layout_constraintTop_toBottomOf="@id/clFollowContainer" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/tvLend" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/btnFollow"
        layout="@layout/btn_purple"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>